Modificando mensaje de rif y max_lenght del campo owner_ci

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ db.sqlite3
 /media/
 /staticfiles/
 .DS_Store
-.mp4
-.png
-.jpg
+*.mp4
+*.png
+*.jpg
 # Archivos compilados de Python
 *.py[cod]
 __pycache__/
